--- a/styles/aboutme.scss
+++ b/styles/aboutme.scss
@@ -1,8 +1,10 @@
 @import './variables.scss';
 
 .aboutme {
-  padding: 40px 50px;
+  padding: 65px 50px 40px;
   font-family: $fontMain;
+  max-width: 1500px;
+  margin: 0 auto;
   h2 {
     text-align: center;
     font-size: 2.6rem;
