--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -80,7 +80,7 @@
   display: grid;
   grid-template-columns: 80px 1fr;
   grid-template-rows: 1fr;
-  background-color: #1c1c1cdb;
+  background-color: rgba(0, 0, 0, 0.11);
   transform: initial;
   opacity: 1;
 }
