--- a/styles/breakpoints/tablet.scss
+++ b/styles/breakpoints/tablet.scss
@@ -83,7 +83,8 @@
     display: grid;
     grid-template-columns: 80px 1fr;
     grid-template-rows: 1fr;
-    background-color: #1c1c1cdb;
+    // background-color: #1c1c1cdb;
+    background-color: rgb(0 0 0 / 11%);
     transform: initial;
     opacity: 1;
 
