--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,9 @@
 .header {
   height: 100vh;
   padding: 25px;
-  /* background-color: #1c1c1cdb; */
-  background-color: rgba(0, 0, 0, 0.849);
+  background-color: rgba(0, 0, 0, 0.11);
   color: white;
-  max-height: 620px;
+  max-height: 450px;
 }
 .header__top {
   height: 60px;
@@ -50,7 +49,7 @@
 }
 .header .nav__list-item a:hover {
   font-size: 2.1rem;
-  color: #1c99fa;
+  text-shadow: -3px 2px 12px white;
 }
 .header__image--bg {
   position: absolute;
@@ -61,7 +60,8 @@
   z-index: -1;
   opacity: 0;
   height: 100vh;
-  max-height: 620px;
+  max-height: 450px;
+  object-fit: cover;
 }
 .header__hero {
   height: 100%;
@@ -80,6 +80,7 @@
   margin-bottom: 15px;
   margin-top: -55px;
   object-fit: cover;
+  border: 4px solid white;
 }
 .header__hero h1 {
   font-size: 4rem;
