--- a/styles/module.css
+++ b/styles/module.css
@@ -28,10 +28,9 @@ h4 {
 .header {
   height: 100vh;
   padding: 25px;
-  /* background-color: #1c1c1cdb; */
-  background-color: rgba(0, 0, 0, 0.849);
+  background-color: rgba(0, 0, 0, 0.11);
   color: white;
-  max-height: 620px;
+  max-height: 450px;
 }
 .header__top {
   height: 60px;
@@ -77,7 +76,7 @@ h4 {
 }
 .header .nav__list-item a:hover {
   font-size: 2.1rem;
-  color: #1c99fa;
+  text-shadow: -3px 2px 12px white;
 }
 .header__image--bg {
   position: absolute;
@@ -88,7 +87,8 @@ h4 {
   z-index: -1;
   opacity: 0;
   height: 100vh;
-  max-height: 620px;
+  max-height: 450px;
+  object-fit: cover;
 }
 .header__hero {
   height: 100%;
@@ -107,6 +107,7 @@ h4 {
   margin-bottom: 15px;
   margin-top: -55px;
   object-fit: cover;
+  border: 4px solid white;
 }
 .header__hero h1 {
   font-size: 4rem;
@@ -134,8 +135,10 @@ h4 {
 }
 
 .aboutme {
-  padding: 40px 50px;
+  padding: 65px 50px 40px;
   font-family: "Open Sans", sans-serif;
+  max-width: 1500px;
+  margin: 0 auto;
 }
 .aboutme h2 {
   text-align: center;
@@ -305,6 +308,8 @@ h4 {
 
 .projects {
   padding: 40px 50px;
+  max-width: 1500px;
+  margin: 0 auto;
 }
 .projects h2 {
   text-align: center;
