--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -1,5 +1,5 @@
 .aboutme {
-  padding: 65px 50px 40px;
+  padding: 100px 50px 0;
   font-family: "Open Sans", sans-serif;
   max-width: 1500px;
   margin: 0 auto;
@@ -10,7 +10,7 @@
   letter-spacing: 1px;
   color: #34343480;
   font-family: "Raleway", sans-serif;
-  margin-bottom: 30px;
+  margin-bottom: 45px;
 }
 .aboutme__description {
   line-height: 1.7rem;
@@ -32,7 +32,7 @@
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #1c99fa;
+  color: #ffaf52;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -40,7 +40,7 @@
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -61,7 +61,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
