--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,7 +1,7 @@
 .contact {
   background-color: #000000e0;
   color: white;
-  padding: 40px 50px;
+  padding: 90px 50px 20px;
 }
 .contact h2 {
   text-align: center;
@@ -16,7 +16,7 @@
 }
 .contact form {
   max-width: 1200px;
-  margin: 40px auto 20px;
+  margin: 40px auto 0;
 }
 .contact label p {
   text-transform: uppercase;
@@ -45,14 +45,14 @@
 }
 .contact label input:focus,
 .contact label textarea:focus {
-  border-bottom: 1px solid #1c99fa;
+  border-bottom: 1px solid #ffaf52;
 }
 .contact button {
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -83,7 +83,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -113,7 +113,7 @@
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #1c99fa;
+  color: #ffaf52;
 }
 
 /*# sourceMappingURL=contact.css.map */
