--- a/styles/header.css
+++ b/styles/header.css
@@ -1,19 +1,26 @@
 .header {
   height: 100vh;
   padding: 25px;
-  background-color: rgba(0, 0, 0, 0.11);
+  background-color: rgba(0, 0, 0, 0.85);
   color: white;
-  max-height: 450px;
+  max-height: 636px;
+  min-height: 360px;
 }
 .header__top {
   height: 60px;
   display: flex;
   justify-content: space-between;
-  top: 1px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   align-items: center;
   transform: translateX(-300px);
   transition: 1s ease-in-out all;
   opacity: 0;
+  background-color: rgba(0, 0, 0, 0.85);
+  z-index: 2;
+  padding: 35px 25px;
 }
 .header__top-title img {
   width: 30px;
@@ -37,7 +44,7 @@
   list-style: none;
 }
 .header .nav__list-item {
-  margin-left: 20px;
+  margin-left: 23px;
   font-size: 1.7rem;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
@@ -59,8 +66,8 @@
   left: 0;
   z-index: -1;
   opacity: 0;
-  height: 100vh;
-  max-height: 450px;
+  max-height: 636px;
+  min-height: 360px;
   object-fit: cover;
 }
 .header__hero {
@@ -74,13 +81,12 @@
   opacity: 0;
 }
 .header__hero img {
-  width: 125px;
-  height: 131px;
+  width: 145px;
+  height: 151px;
   border-radius: 50%;
   margin-bottom: 15px;
   margin-top: -55px;
   object-fit: cover;
-  border: 4px solid white;
 }
 .header__hero h1 {
   font-size: 4rem;
