--- a/styles/module.css
+++ b/styles/module.css
@@ -28,19 +28,26 @@ h4 {
 .header {
   height: 100vh;
   padding: 25px;
-  background-color: rgba(0, 0, 0, 0.11);
+  background-color: rgba(0, 0, 0, 0.85);
   color: white;
-  max-height: 450px;
+  max-height: 636px;
+  min-height: 360px;
 }
 .header__top {
   height: 60px;
   display: flex;
   justify-content: space-between;
-  top: 1px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   align-items: center;
   transform: translateX(-300px);
   transition: 1s ease-in-out all;
   opacity: 0;
+  background-color: rgba(0, 0, 0, 0.85);
+  z-index: 2;
+  padding: 35px 25px;
 }
 .header__top-title img {
   width: 30px;
@@ -64,7 +71,7 @@ h4 {
   list-style: none;
 }
 .header .nav__list-item {
-  margin-left: 20px;
+  margin-left: 23px;
   font-size: 1.7rem;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
@@ -86,8 +93,8 @@ h4 {
   left: 0;
   z-index: -1;
   opacity: 0;
-  height: 100vh;
-  max-height: 450px;
+  max-height: 636px;
+  min-height: 360px;
   object-fit: cover;
 }
 .header__hero {
@@ -101,13 +108,12 @@ h4 {
   opacity: 0;
 }
 .header__hero img {
-  width: 125px;
-  height: 131px;
+  width: 145px;
+  height: 151px;
   border-radius: 50%;
   margin-bottom: 15px;
   margin-top: -55px;
   object-fit: cover;
-  border: 4px solid white;
 }
 .header__hero h1 {
   font-size: 4rem;
@@ -135,7 +141,7 @@ h4 {
 }
 
 .aboutme {
-  padding: 65px 50px 40px;
+  padding: 100px 50px 0;
   font-family: "Open Sans", sans-serif;
   max-width: 1500px;
   margin: 0 auto;
@@ -146,7 +152,7 @@ h4 {
   letter-spacing: 1px;
   color: #34343480;
   font-family: "Raleway", sans-serif;
-  margin-bottom: 30px;
+  margin-bottom: 45px;
 }
 .aboutme__description {
   line-height: 1.7rem;
@@ -168,7 +174,7 @@ h4 {
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #1c99fa;
+  color: #ffaf52;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -176,7 +182,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -197,7 +203,7 @@ h4 {
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -225,7 +231,7 @@ h4 {
 }
 
 .habilities {
-  padding: 40px 50px;
+  padding: 90px 50px 0;
   max-width: 1500px;
   margin: 0 auto;
 }
@@ -237,7 +243,7 @@ h4 {
 }
 .habilities ul {
   display: grid;
-  margin-top: 30px;
+  margin-top: 45px;
   grid-template-columns: repeat(4, 1fr);
   gap: 40px;
   list-style: none;
@@ -258,7 +264,7 @@ h4 {
 }
 .habilities__item div {
   font-size: 2rem;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   color: white;
   border-radius: 50%;
   width: 68px;
@@ -283,7 +289,7 @@ h4 {
 .habilities .habilities__item::before {
   content: "";
   height: 3px;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   width: 20px;
   position: absolute;
   top: 0;
@@ -307,7 +313,7 @@ h4 {
 }
 
 .projects {
-  padding: 40px 50px;
+  padding: 100px 50px 0;
   max-width: 1500px;
   margin: 0 auto;
 }
@@ -318,7 +324,7 @@ h4 {
   color: #34343480;
 }
 .projects__container {
-  padding: 30px 0;
+  padding: 45px 0 30px;
 }
 .projects__item {
   display: flex;
@@ -365,7 +371,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -386,7 +392,7 @@ h4 {
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -408,7 +414,7 @@ h4 {
 .contact {
   background-color: #000000e0;
   color: white;
-  padding: 40px 50px;
+  padding: 90px 50px 20px;
 }
 .contact h2 {
   text-align: center;
@@ -423,7 +429,7 @@ h4 {
 }
 .contact form {
   max-width: 1200px;
-  margin: 40px auto 20px;
+  margin: 40px auto 0;
 }
 .contact label p {
   text-transform: uppercase;
@@ -452,14 +458,14 @@ h4 {
 }
 .contact label input:focus,
 .contact label textarea:focus {
-  border-bottom: 1px solid #1c99fa;
+  border-bottom: 1px solid #ffaf52;
 }
 .contact button {
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -490,7 +496,7 @@ h4 {
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -520,7 +526,7 @@ h4 {
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #1c99fa;
+  color: #ffaf52;
 }
 
 .moveHeaderTop {
