--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,5 +1,5 @@
 .projects {
-  padding: 40px 50px;
+  padding: 100px 50px 0;
   max-width: 1500px;
   margin: 0 auto;
 }
@@ -10,7 +10,7 @@
   color: #34343480;
 }
 .projects__container {
-  padding: 30px 0;
+  padding: 45px 0 30px;
 }
 .projects__item {
   display: flex;
@@ -57,7 +57,7 @@
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #1c99fa;
+  background-color: #ffaf52;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -78,7 +78,7 @@
   left: 0;
   top: -100%;
   content: "";
-  background-color: #4db1ff;
+  background-color: #ffa500;
   width: 100%;
   height: 100%;
   z-index: 1;
