--- a/sass/breakpoints/sm-tablet.scss
+++ b/sass/breakpoints/sm-tablet.scss
@@ -1,13 +1,13 @@
 .header__hero {
-  padding-left: 15px;
   &-description {
-    padding-left: 15px;
     h1 {
-      font-size: 1.4rem;
+      font-size: 2.4rem;
+      text-align: center;
     }
 
     p {
-      font-size: 1.1rem;
+      padding-top: 10px;
+      font-size: 1.7rem;
       line-height: 1.6rem;
     }
   }
