--- a/sass/breakpoints/tablet.scss
+++ b/sass/breakpoints/tablet.scss
@@ -1,118 +1,146 @@
 @import '../variables.scss';
 
-.responsive-title {
-  display: flex;
-  background-color: #000000e0;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  img {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-  }
-  a {
-    color: white;
-    font-size: 2.5rem;
-    font-family: $fontTitles;
-    text-decoration: none;
-    letter-spacing: 0.7rem;
-  }
-}
+// .responsive-title {
+//   display: flex;
+//   background-color: #000000e0;
+//   height: 80px;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   img {
+//     width: 30px;
+//     height: 30px;
+//     margin-right: 10px;
+//   }
+//   a {
+//     color: white;
+//     font-size: 2.5rem;
+//     font-family: $fontTitles;
+//     text-decoration: none;
+//     letter-spacing: 0.7rem;
+//   }
+// }
 
 .header {
-  transition: 0.5s;
-  position: fixed;
-  width: 100%;
-  top: -100vh;
-  height: 100vh;
-  max-height: none;
-  display: grid;
-  z-index: 10;
-  grid-template-rows: 170px 1fr 0;
+  // z-index: 10;
+  // width: 100%;
   padding: 0;
-  background-color: #f7f7f7;
-
+  // height: auto;
+  max-height: 500px;
   &__top {
-    height: auto;
-    width: 100%;
-    transform: initial;
-    opacity: 1;
+    // position: relative;
+    // position: initial;
+    // background-color: transparent;
+    // position: absolute;
+    // top: -100vh;
+    // height: 100vh;
+    // top: -100vh;
+
+    // opacity: 0;
+    // opacity: 1;
+    // position: absolute;
+    // height: auto;
+    // width: 100%;
+    // transform: initial;
+    // opacity: 1;
+    // position: relative;
+    // background-color: rgba(255, 0, 0, 0.418);
+    // z-index: initial;
+    // padding: 10px;
     .nav {
-      height: 100%;
+      transition: 0.5s;
+      background-color: red;
+      position: fixed;
+      left: 0;
+      top: -280px;
       width: 100%;
+      height: 280px;
+      display: flex;
+      // display: none;
+      // top: -100%;
+      // height: 100%;
+      // width: 100%;
     }
+
+    /*
+    !EL INTERSECTION OBERVER SIGUE AFECTANDO AL NAV, POR LO QUE NO SE MUESTRA SI AL
+    !INICIO ESTAMOS EN OTRA SECCION
+    */
     .nav__list {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: 20px;
-      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       height: 100%;
-      padding: 20px;
+      width: 100%;
+      // display: grid;
+      // grid-template-columns: 1fr;
+      // grid-auto-rows: 30px;
+      // gap: 10px;
+      // width: 100%;
+      // height: 100%;
+      border: 1px solid green;
+
+      // padding: 20px;
       &-item {
-        font-size: 1.6rem;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        background-color: #1c1c1c;
-        border-radius: 20px;
+        // font-size: 1.6rem;
+        // border: 1px solid white;
+        display: flex;
+        align-items: center;
+        height: 16.67%;
+        // width: 100%;
+        // width: 100%;
+        // height: 100%;
+        // margin: 0;
+        // background-color: #1c1c1c;
+        // border-radius: 20px;
         a {
-          color: white;
-          display: block;
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 1.8rem;
+          // color: white;
+          // display: block;
+          // width: 100%;
+          // height: 100%;
+          // display: flex;
+          // justify-content: center;
+          // align-items: center;
+          // font-size: 1.8rem;
         }
       }
     }
     &-title {
-      display: none;
+      // display: none;
+      margin: 0 auto;
     }
   }
 
   &__hero {
-    padding-left: 30px;
-    height: auto;
-    grid-row: 1 / span 1;
-    height: auto;
-    display: grid;
-    grid-template-columns: 80px 1fr;
-    grid-template-rows: 1fr;
-    // background-color: #1c1c1cdb;
-    background-color: rgb(0 0 0 / 11%);
-    transform: initial;
-    opacity: 1;
+    // background-color: rgba(0, 128, 0, 0.486);
+    // height: auto;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
 
     &-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      // width: 105px;
+      // height: 110px;
       img {
-        width: 85px;
-        height: 90px;
-        margin: 0;
+        // height: 100%;
+        // width: 100%;
+        // margin: 0;
       }
     }
 
     &-description {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      height: 100%;
-      padding-left: 25px;
+      // text-align: center;
+      // padding-top: 10px;
       h1 {
-        font-size: 2.3rem;
+        font-size: 3rem;
       }
-
       p {
-        text-align: left;
-        font-size: 1.3rem;
+        // text-align: left;
+        font-size: 2rem;
+        // text-align: center;
       }
     }
   }
@@ -135,44 +163,47 @@
   }
 
   .nav__list {
-    a a:hover {
-      color: white;
-    }
+    // a a:hover {
+    //   color: white;
+    // }
   }
 
   &__closer {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: $main;
-    justify-content: flex-end;
-    width: 70px;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
-    font-size: 3rem;
+    // display: flex;
+    // justify-content: center;
+    // position: absolute;
+    // bottom: 20px;
+    // right: 20px;
+    // background-color: $main;
+    // justify-content: flex-end;
+    // width: 70px;
+    // height: 70px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // border-radius: 100px;
+    // font-size: 3rem;
 
     div {
-      margin-right: 20px;
-      color: white;
-      @include darkShadow();
+      // margin-right: 20px;
+      // color: white;
+      // @include darkShadow();
     }
   }
-}
-
-.activate__header {
-  top: 0;
+  .activate__header {
+    top: 0;
+    // opacity: 1;
+  }
 }
 
 .header__image--bg {
   /* display: none; */
-  position: absolute;
-  object-fit: cover;
-  height: 170px;
+  // position: absolute;
+  // object-fit: cover;
+  // height: 170px;
+  // height: 100vh;
+  max-height: 500px;
+  min-height: 360px;
 }
 
 /*_______________About me________________*/
