--- a/styles/module.css
+++ b/styles/module.css
@@ -135,6 +135,10 @@ h4 {
   display: none;
 }
 
+.nav-responsive {
+  display: none;
+}
+
 .opacity-img {
   opacity: 1;
   transition: 0.4s;
@@ -174,7 +178,7 @@ h4 {
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #ffaf52;
+  color: #ffa500;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -182,7 +186,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -199,15 +203,16 @@ h4 {
   z-index: 2;
 }
 .aboutme__personal .nav__list-item-link::after {
+  content: "";
   position: absolute;
   left: 0;
-  top: -100%;
-  content: "";
-  background-color: #ffa500;
+  top: -300%;
+  background-color: #ffaf52;
   width: 100%;
-  height: 100%;
+  height: 300%;
   z-index: 1;
-  transition: 0.4s ease all;
+  transition: 0.4s ease-in-out all;
+  border-radius: 0 0 300px 300px;
 }
 .aboutme__personal .nav__list-item-link:hover::after {
   top: 0;
@@ -264,7 +269,7 @@ h4 {
 }
 .habilities__item div {
   font-size: 2rem;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   color: white;
   border-radius: 50%;
   width: 68px;
@@ -289,7 +294,7 @@ h4 {
 .habilities .habilities__item::before {
   content: "";
   height: 3px;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   width: 20px;
   position: absolute;
   top: 0;
@@ -371,7 +376,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -388,15 +393,16 @@ h4 {
   z-index: 2;
 }
 .projects__item-description-buttons a::after {
+  content: "";
   position: absolute;
   left: 0;
-  top: -100%;
-  content: "";
-  background-color: #ffa500;
+  top: -300%;
+  background-color: #ffaf52;
   width: 100%;
-  height: 100%;
+  height: 300%;
   z-index: 1;
-  transition: 0.4s ease all;
+  transition: 0.4s ease-in-out all;
+  border-radius: 0 0 300px 300px;
 }
 .projects__item-description a:hover::after {
   top: 0;
@@ -458,14 +464,14 @@ h4 {
 }
 .contact label input:focus,
 .contact label textarea:focus {
-  border-bottom: 1px solid #ffaf52;
+  border-bottom: 1px solid #ffa500;
 }
 .contact button {
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -492,15 +498,16 @@ h4 {
   z-index: 2;
 }
 .contact button::after {
+  content: "";
   position: absolute;
   left: 0;
-  top: -100%;
-  content: "";
-  background-color: #ffa500;
+  top: -300%;
+  background-color: #ffaf52;
   width: 100%;
-  height: 100%;
+  height: 300%;
   z-index: 1;
-  transition: 0.4s ease all;
+  transition: 0.4s ease-in-out all;
+  border-radius: 0 0 300px 300px;
 }
 .contact button:hover::after {
   top: 0;
@@ -508,7 +515,7 @@ h4 {
 .contact ul {
   list-style: none;
   display: flex;
-  margin-top: 20px;
+  margin-top: 40px;
   width: 220px;
   display: flex;
   justify-content: space-between;
@@ -518,7 +525,7 @@ h4 {
   width: 32px;
 }
 .contact li i {
-  font-size: 3rem;
+  font-size: 3.5rem;
   transition: 0.4s;
 }
 .contact li a {
@@ -526,7 +533,40 @@ h4 {
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #ffaf52;
+  color: #ffa500;
+}
+
+.sendedMessage {
+  opacity: 0;
+  top: 0;
+  color: white;
+  top: -100%;
+  width: 100%;
+  position: fixed;
+  background-color: transparent;
+  transition: 1s ease;
+}
+.sendedMessage__content {
+  margin: 0 auto;
+  width: 240px;
+  border-radius: 5px;
+  justify-content: space-between;
+  font-size: 1.7rem;
+  align-items: center;
+  padding: 10px 20px;
+  display: flex;
+  background-color: #ffa500;
+}
+.sendedMessage__content-icon {
+  font-size: 2.5rem;
+}
+.sendedMessage__content span {
+  text-align: center;
+}
+
+.sendedMessage.show {
+  opacity: 1;
+  top: 20px;
 }
 
 .moveHeaderTop {
