--- a/sass/breakpoints/sm-tablet.scss
+++ b/sass/breakpoints/sm-tablet.scss
@@ -40,7 +40,7 @@
     font-size: 2.2rem;
   }
   ul {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
     .a {
       transition-delay: 0s;
     }
@@ -59,6 +59,10 @@
 
     .e {
       transition-delay: 2s;
+    }
+
+    .f {
+      transition-delay: 2.5s;
     }
   }
 }
