--- a/sass/breakpoints/tablet.scss
+++ b/sass/breakpoints/tablet.scss
@@ -1,146 +1,46 @@
 @import '../variables.scss';
 
-// .responsive-title {
-//   display: flex;
-//   background-color: #000000e0;
-//   height: 80px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   img {
-//     width: 30px;
-//     height: 30px;
-//     margin-right: 10px;
-//   }
-//   a {
-//     color: white;
-//     font-size: 2.5rem;
-//     font-family: $fontTitles;
-//     text-decoration: none;
-//     letter-spacing: 0.7rem;
-//   }
-// }
-
 .header {
-  // z-index: 10;
-  // width: 100%;
   padding: 0;
-  // height: auto;
   max-height: 500px;
   &__top {
-    // position: relative;
-    // position: initial;
-    // background-color: transparent;
-    // position: absolute;
-    // top: -100vh;
-    // height: 100vh;
-    // top: -100vh;
-
-    // opacity: 0;
-    // opacity: 1;
-    // position: absolute;
-    // height: auto;
-    // width: 100%;
-    // transform: initial;
-    // opacity: 1;
-    // position: relative;
-    // background-color: rgba(255, 0, 0, 0.418);
-    // z-index: initial;
-    // padding: 10px;
+    position: initial;
     .nav {
       transition: 0.5s;
-      background-color: red;
+      background-color: black;
       position: fixed;
       left: 0;
       top: -280px;
       width: 100%;
       height: 280px;
       display: flex;
-      // display: none;
-      // top: -100%;
-      // height: 100%;
-      // width: 100%;
+      display: none;
     }
 
-    /*
-    !EL INTERSECTION OBERVER SIGUE AFECTANDO AL NAV, POR LO QUE NO SE MUESTRA SI AL
-    !INICIO ESTAMOS EN OTRA SECCION
-    */
     .nav__list {
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100%;
       width: 100%;
-      // display: grid;
-      // grid-template-columns: 1fr;
-      // grid-auto-rows: 30px;
-      // gap: 10px;
-      // width: 100%;
-      // height: 100%;
-      border: 1px solid green;
-
-      // padding: 20px;
       &-item {
-        // font-size: 1.6rem;
-        // border: 1px solid white;
         display: flex;
         align-items: center;
         height: 16.67%;
-        // width: 100%;
-        // width: 100%;
-        // height: 100%;
-        // margin: 0;
-        // background-color: #1c1c1c;
-        // border-radius: 20px;
-        a {
-          // color: white;
-          // display: block;
-          // width: 100%;
-          // height: 100%;
-          // display: flex;
-          // justify-content: center;
-          // align-items: center;
-          // font-size: 1.8rem;
-        }
       }
     }
     &-title {
-      // display: none;
       margin: 0 auto;
     }
   }
 
   &__hero {
-    // background-color: rgba(0, 128, 0, 0.486);
-    // height: auto;
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-
-    &-img {
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // width: 105px;
-      // height: 110px;
-      img {
-        // height: 100%;
-        // width: 100%;
-        // margin: 0;
-      }
-    }
-
     &-description {
-      // text-align: center;
-      // padding-top: 10px;
       h1 {
         font-size: 3rem;
       }
       p {
-        // text-align: left;
         font-size: 2rem;
-        // text-align: center;
       }
     }
   }
@@ -161,47 +61,53 @@
     opacity: 1;
     @include darkShadow();
   }
+}
 
-  .nav__list {
-    // a a:hover {
-    //   color: white;
-    // }
-  }
-
-  &__closer {
-    // display: flex;
-    // justify-content: center;
-    // position: absolute;
-    // bottom: 20px;
-    // right: 20px;
-    // background-color: $main;
-    // justify-content: flex-end;
-    // width: 70px;
-    // height: 70px;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // border-radius: 100px;
-    // font-size: 3rem;
-
-    div {
-      // margin-right: 20px;
-      // color: white;
-      // @include darkShadow();
+.nav-responsive {
+  transition: 0.5s;
+  background-color: black;
+  position: fixed;
+  left: 0;
+  top: -320px;
+  width: 100%;
+  height: 320px;
+  display: flex;
+  padding: 20px 0;
+  &__list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    list-style: none;
+    &-item {
+      display: flex;
+      align-items: center;
+      height: 16.67%;
+      a {
+        color: white;
+        text-decoration: none;
+        transition: 0.4s;
+        font-size: 1.7rem;
+        font-family: $fontTitles;
+        font-weight: 600;
+      }
+      a:hover {
+        font-size: 2.1rem;
+        text-shadow: -3px 2px 12px white;
+      }
     }
-  }
-  .activate__header {
-    top: 0;
-    // opacity: 1;
   }
 }
 
+.activate__nav {
+  top: 0;
+}
+
 .header__image--bg {
-  /* display: none; */
-  // position: absolute;
-  // object-fit: cover;
-  // height: 170px;
-  // height: 100vh;
   max-height: 500px;
   min-height: 360px;
 }
@@ -245,23 +151,23 @@
   ul {
     grid-template-columns: repeat(2, 1fr);
     .a {
-      transition-delay: 0s;
-    }
-
-    .b {
       transition-delay: 0.5s;
     }
 
+    .b {
+      transition-delay: 0s;
+    }
+
     .c {
-      transition-delay: 1s;
+      transition-delay: 0.5s;
     }
 
     .d {
-      transition-delay: 1.5s;
+      transition-delay: 0s;
     }
 
     .e {
-      transition-delay: 2s;
+      transition-delay: 0.5s;
     }
   }
 }
@@ -320,5 +226,14 @@
   }
   h3 {
     text-align: center;
+  }
+
+  ul {
+    margin: 40px auto 0;
+  }
+
+  button {
+    display: block;
+    margin: 0 auto;
   }
 }
