--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -81,7 +81,7 @@
   ul {
     list-style: none;
     display: flex;
-    margin-top: 20px;
+    margin-top: 40px;
     width: 220px;
     display: flex;
     justify-content: space-between;
@@ -91,7 +91,7 @@
     margin-right: 15px;
     width: 32px;
     i {
-      font-size: 3rem;
+      font-size: 3.5rem;
       transition: 0.4s;
     }
 
@@ -106,4 +106,37 @@
       color: $main;
     }
   }
+}
+
+.sendedMessage {
+  opacity: 0;
+  top: 0;
+  color: white;
+  top: -100%;
+  width: 100%;
+  position: fixed;
+  background-color: transparent;
+  transition: 1s ease;
+  &__content {
+    margin: 0 auto;
+    width: 240px;
+    border-radius: 5px;
+    justify-content: space-between;
+    font-size: 1.7rem;
+    align-items: center;
+    padding: 10px 20px;
+    display: flex;
+    background-color: $main;
+    &-icon {
+      font-size: 2.5rem;
+    }
+    span {
+      text-align: center;
+    }
+  }
+}
+
+.sendedMessage.show {
+  opacity: 1;
+  top: 20px;
 }
