--- a/sass/header.scss
+++ b/sass/header.scss
@@ -95,7 +95,6 @@
       margin-bottom: 15px;
       margin-top: -55px;
       object-fit: cover;
-      // border: 4px solid white;
     }
 
     h1 {
@@ -121,6 +120,10 @@
   &__closer {
     display: none;
   }
+}
+
+.nav-responsive {
+  display: none;
 }
 
 .opacity-img {
