--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,7 +1,6 @@
 $primary: #1e2233;
 $secondary: #24273d;
-$main: #ffaf52;
-// $main: #1c99fa;
+$main: #ffa500;
 $fontTitles: 'Raleway', sans-serif;
 $fontMain: 'Open Sans', sans-serif;
 $gray: #34343480;
@@ -41,16 +40,16 @@ $texts: #767676;
 }
 
 @mixin blueButtonAfter() {
+  content: '';
   position: absolute;
   left: 0;
-  top: -100%;
-  content: '';
-  // background-color: #4db1ff;
-  background-color: #ffa500;
+  top: -300%;
+  background-color: #ffaf52;
   width: 100%;
-  height: 100%;
+  height: 300%;
   z-index: 1;
-  transition: 0.4s ease all;
+  transition: 0.4s ease-in-out all;
+  border-radius: 0 0 300px 300px;
 }
 
 @mixin blueButtonHover() {
