--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -32,7 +32,7 @@
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #ffaf52;
+  color: #ffa500;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -40,7 +40,7 @@
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffaf52;
+  background-color: #ffa500;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -57,15 +57,16 @@
   z-index: 2;
 }
 .aboutme__personal .nav__list-item-link::after {
+  content: "";
   position: absolute;
   left: 0;
-  top: -100%;
-  content: "";
-  background-color: #ffa500;
+  top: -300%;
+  background-color: #ffaf52;
   width: 100%;
-  height: 100%;
+  height: 300%;
   z-index: 1;
-  transition: 0.4s ease all;
+  transition: 0.4s ease-in-out all;
+  border-radius: 0 0 300px 300px;
 }
 .aboutme__personal .nav__list-item-link:hover::after {
   top: 0;
