--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -3,20 +3,18 @@
   max-height: 500px;
 }
 .header__top {
-  /*
-  !EL INTERSECTION OBERVER SIGUE AFECTANDO AL NAV, POR LO QUE NO SE MUESTRA SI AL
-  !INICIO ESTAMOS EN OTRA SECCION
-  */
+  position: initial;
 }
 .header__top .nav {
   transition: 0.5s;
-  background-color: red;
+  background-color: black;
   position: fixed;
   left: 0;
   top: -280px;
   width: 100%;
   height: 280px;
   display: flex;
+  display: none;
 }
 .header__top .nav__list {
   flex-direction: column;
@@ -24,7 +22,6 @@
   justify-content: center;
   height: 100%;
   width: 100%;
-  border: 1px solid green;
 }
 .header__top .nav__list-item {
   display: flex;
@@ -58,12 +55,52 @@
   box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
 }
-.header .activate__header {
+
+.nav-responsive {
+  transition: 0.5s;
+  background-color: black;
+  position: fixed;
+  left: 0;
+  top: -320px;
+  width: 100%;
+  height: 320px;
+  display: flex;
+  padding: 20px 0;
+}
+.nav-responsive__list {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  list-style: none;
+}
+.nav-responsive__list-item {
+  display: flex;
+  align-items: center;
+  height: 16.67%;
+}
+.nav-responsive__list-item a {
+  color: white;
+  text-decoration: none;
+  transition: 0.4s;
+  font-size: 1.7rem;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+}
+.nav-responsive__list-item a:hover {
+  font-size: 2.1rem;
+  text-shadow: -3px 2px 12px white;
+}
+
+.activate__nav {
   top: 0;
 }
 
 .header__image--bg {
-  /* display: none; */
   max-height: 500px;
   min-height: 360px;
 }
@@ -109,19 +146,19 @@
   grid-template-columns: repeat(2, 1fr);
 }
 .habilities ul .a {
-  transition-delay: 0s;
-}
-.habilities ul .b {
   transition-delay: 0.5s;
 }
+.habilities ul .b {
+  transition-delay: 0s;
+}
 .habilities ul .c {
-  transition-delay: 1s;
+  transition-delay: 0.5s;
 }
 .habilities ul .d {
-  transition-delay: 1.5s;
+  transition-delay: 0s;
 }
 .habilities ul .e {
-  transition-delay: 2s;
+  transition-delay: 0.5s;
 }
 
 /*_______________Proyects________________*/
@@ -174,6 +211,13 @@
 }
 .contact h3 {
   text-align: center;
+}
+.contact ul {
+  margin: 40px auto 0;
+}
+.contact button {
+  display: block;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=tablet.css.map */
