--- a/styles/module.css
+++ b/styles/module.css
@@ -437,6 +437,11 @@ h4 {
   max-width: 1200px;
   margin: 40px auto 0;
 }
+.contact label {
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
 .contact label p {
   text-transform: uppercase;
   font-size: 1.7rem;
@@ -461,6 +466,21 @@ h4 {
   height: 100px;
   resize: none;
   font-family: "Open Sans", sans-serif;
+  overflow: auto;
+}
+.contact label textarea::-webkit-scrollbar {
+  width: 10px;
+}
+.contact label textarea::-webkit-scrollbar-track {
+  background: #404040;
+  border-radius: 10px;
+}
+.contact label textarea::-webkit-scrollbar-thumb {
+  background: #c5c5c5;
+  border-radius: 10px;
+}
+.contact label textarea::-webkit-scrollbar-thumb:hover {
+  background: #ffa500;
 }
 .contact label input:focus,
 .contact label textarea:focus {
