Change colors and hero

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,6 +1,6 @@
 $primary: #1e2233;
 $secondary: #24273d;
-$main: #ffa500;
+$main: #26c6da;
 $fontTitles: 'Raleway', sans-serif;
 $fontMain: 'Open Sans', sans-serif;
 $gray: #34343480;
