--- a/styles/projects.css
+++ b/styles/projects.css
@@ -57,7 +57,7 @@
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffa500;
+  background-color: #26c6da;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
