--- a/sass/breakpoints/tablet.scss
+++ b/sass/breakpoints/tablet.scss
@@ -6,14 +6,6 @@
   &__top {
     position: initial;
     .nav {
-      transition: 0.5s;
-      background-color: black;
-      position: fixed;
-      left: 0;
-      top: -280px;
-      width: 100%;
-      height: 280px;
-      display: flex;
       display: none;
     }
 
@@ -35,6 +27,7 @@
   }
 
   &__hero {
+    margin-top: -30px;
     &-description {
       h1 {
         font-size: 3rem;
@@ -46,7 +39,7 @@
   }
 
   &__activators {
-    background-color: #ffaf52a6;
+    background-color: #26c6daa6;
     width: 70px;
     height: 70px;
     position: fixed;
@@ -65,7 +58,7 @@
 
 .nav-responsive {
   transition: 0.5s;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   left: 0;
   top: -320px;
