--- a/sass/header.scss
+++ b/sass/header.scss
@@ -18,7 +18,7 @@
     width: 100%;
     align-items: center;
     transform: translateX(-300px);
-    transition: 1s ease-in-out all;
+    transition: 0.7s ease-in-out all;
     opacity: 0;
     background-color: rgb(0 0 0 / 75%);
     z-index: 2;
@@ -40,6 +40,10 @@
         letter-spacing: 0.7rem;
       }
     }
+  }
+
+  .change_ht {
+    background-color: #26c6dab3;
   }
 
   .nav {
@@ -88,6 +92,7 @@
     transform: translateY(200px);
     transition: 1s ease-in-out all;
     opacity: 0;
+    margin-top: 30px;
     img {
       width: 145px;
       height: 151px;
