--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -32,7 +32,7 @@
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #ffa500;
+  color: #26c6da;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -40,7 +40,7 @@
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffa500;
+  background-color: #26c6da;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
