--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -6,14 +6,6 @@
   position: initial;
 }
 .header__top .nav {
-  transition: 0.5s;
-  background-color: black;
-  position: fixed;
-  left: 0;
-  top: -280px;
-  width: 100%;
-  height: 280px;
-  display: flex;
   display: none;
 }
 .header__top .nav__list {
@@ -31,6 +23,9 @@
 .header__top-title {
   margin: 0 auto;
 }
+.header__hero {
+  margin-top: -30px;
+}
 .header__hero-description h1 {
   font-size: 3rem;
 }
@@ -38,7 +33,7 @@
   font-size: 2rem;
 }
 .header__activators {
-  background-color: #ffaf52a6;
+  background-color: #26c6daa6;
   width: 70px;
   height: 70px;
   position: fixed;
@@ -58,7 +53,7 @@
 
 .nav-responsive {
   transition: 0.5s;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   left: 0;
   top: -320px;
