--- a/styles/habilities.css
+++ b/styles/habilities.css
@@ -32,7 +32,7 @@
 }
 .habilities__item div {
   font-size: 2rem;
-  background-color: #ffa500;
+  background-color: #26c6da;
   color: white;
   border-radius: 50%;
   width: 68px;
@@ -57,7 +57,7 @@
 .habilities .habilities__item::before {
   content: "";
   height: 3px;
-  background-color: #ffa500;
+  background-color: #26c6da;
   width: 20px;
   position: absolute;
   top: 0;
