--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,7 @@
   width: 100%;
   align-items: center;
   transform: translateX(-300px);
-  transition: 1s ease-in-out all;
+  transition: 0.7s ease-in-out all;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.75);
   z-index: 2;
@@ -36,6 +36,9 @@
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   letter-spacing: 0.7rem;
+}
+.header .change_ht {
+  background-color: #26c6dab3;
 }
 .header .nav__list {
   display: flex;
@@ -79,6 +82,7 @@
   transform: translateY(200px);
   transition: 1s ease-in-out all;
   opacity: 0;
+  margin-top: 30px;
 }
 .header__hero img {
   width: 145px;
