--- a/styles/module.css
+++ b/styles/module.css
@@ -43,7 +43,7 @@ h4 {
   width: 100%;
   align-items: center;
   transform: translateX(-300px);
-  transition: 1s ease-in-out all;
+  transition: 0.7s ease-in-out all;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.75);
   z-index: 2;
@@ -63,6 +63,9 @@ h4 {
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   letter-spacing: 0.7rem;
+}
+.header .change_ht {
+  background-color: #26c6dab3;
 }
 .header .nav__list {
   display: flex;
@@ -106,6 +109,7 @@ h4 {
   transform: translateY(200px);
   transition: 1s ease-in-out all;
   opacity: 0;
+  margin-top: 30px;
 }
 .header__hero img {
   width: 145px;
@@ -178,7 +182,7 @@ h4 {
   line-height: 2.1rem;
 }
 .aboutme__personal li a {
-  color: #ffa500;
+  color: #26c6da;
   text-decoration: none;
 }
 .aboutme__personal .nav__list-item-link {
@@ -186,7 +190,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffa500;
+  background-color: #26c6da;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -269,7 +273,7 @@ h4 {
 }
 .habilities__item div {
   font-size: 2rem;
-  background-color: #ffa500;
+  background-color: #26c6da;
   color: white;
   border-radius: 50%;
   width: 68px;
@@ -294,7 +298,7 @@ h4 {
 .habilities .habilities__item::before {
   content: "";
   height: 3px;
-  background-color: #ffa500;
+  background-color: #26c6da;
   width: 20px;
   position: absolute;
   top: 0;
@@ -376,7 +380,7 @@ h4 {
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffa500;
+  background-color: #26c6da;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -480,18 +484,18 @@ h4 {
   border-radius: 10px;
 }
 .contact label textarea::-webkit-scrollbar-thumb:hover {
-  background: #ffa500;
+  background: #26c6da;
 }
 .contact label input:focus,
 .contact label textarea:focus {
-  border-bottom: 1px solid #ffa500;
+  border-bottom: 1px solid #26c6da;
 }
 .contact button {
   position: relative;
   overflow: hidden;
   color: white;
   font-weight: 400;
-  background-color: #ffa500;
+  background-color: #26c6da;
   margin-right: 5px;
   font-size: 1.5rem;
   padding: 15px 25px;
@@ -553,7 +557,7 @@ h4 {
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #ffa500;
+  color: #26c6da;
 }
 
 .sendedMessage {
@@ -575,7 +579,7 @@ h4 {
   align-items: center;
   padding: 10px 20px;
   display: flex;
-  background-color: #ffa500;
+  background-color: #26c6da;
 }
 .sendedMessage__content-icon {
   font-size: 2.5rem;
