--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,6 +1,7 @@
 $primary: #1e2233;
 $secondary: #24273d;
 $main: #26c6da;
+$selections: #ffaf52;
 $fontTitles: 'Raleway', sans-serif;
 $fontMain: 'Open Sans', sans-serif;
 $gray: #34343480;
@@ -43,10 +44,10 @@ $texts: #767676;
   content: '';
   position: absolute;
   left: 0;
-  top: -300%;
-  background-color: #ffaf52;
+  top: -370%;
+  background-color: $selections;
   width: 100%;
-  height: 300%;
+  height: 370%;
   z-index: 1;
   transition: 0.4s ease-in-out all;
   border-radius: 0 0 300px 300px;
