--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -32,7 +32,7 @@
 .header__hero-description p {
   font-size: 2rem;
 }
-.header__activators {
+.header__activator {
   background-color: #26c6daa6;
   width: 70px;
   height: 70px;
@@ -46,9 +46,13 @@
   justify-content: center;
   border-radius: 100%;
   opacity: 1;
+  cursor: pointer;
   -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.28);
+}
+.header .active__activator {
+  background-color: #ffaf52cc;
 }
 
 .nav-responsive {
@@ -213,6 +217,10 @@
 .contact button {
   display: block;
   margin: 0 auto;
+}
+
+.active__activator {
+  background-color: #ffaf52a6;
 }
 
 /*# sourceMappingURL=tablet.css.map */
