--- a/styles/contact.css
+++ b/styles/contact.css
@@ -102,10 +102,10 @@
   content: "";
   position: absolute;
   left: 0;
-  top: -300%;
+  top: -370%;
   background-color: #ffaf52;
   width: 100%;
-  height: 300%;
+  height: 370%;
   z-index: 1;
   transition: 0.4s ease-in-out all;
   border-radius: 0 0 300px 300px;
@@ -134,7 +134,7 @@
 }
 .contact li:hover i {
   font-size: 3.8rem;
-  color: #26c6da;
+  color: #ffaf52;
 }
 
 .sendedMessage {
