--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -9,7 +9,7 @@
   }
 
   &__container {
-    padding: 45px 0 30px;
+    padding: 45px 0 0px;
   }
 
   &__item {
@@ -78,12 +78,17 @@
     }
   }
 
+  &__item:last-child {
+    margin-bottom: 0;
+  }
+
   &__cta {
     text-align: center;
     font-size: 1.5rem;
     line-height: 2.5rem;
     text-align: center;
     color: $texts;
+    padding: 30px 0;
     a {
       color: $main;
       transition: 0.3s;
