--- a/styles/module.css
+++ b/styles/module.css
@@ -333,7 +333,7 @@ h4 {
   color: #34343480;
 }
 .projects__container {
-  padding: 45px 0 30px;
+  padding: 45px 0 0px;
 }
 .projects__item {
   display: flex;
@@ -420,12 +420,16 @@ h4 {
   height: 100%;
   object-fit: cover;
 }
+.projects__item:last-child {
+  margin-bottom: 0;
+}
 .projects__cta {
   text-align: center;
   font-size: 1.5rem;
   line-height: 2.5rem;
   text-align: center;
   color: #767676;
+  padding: 30px 0;
 }
 .projects__cta a {
   color: #26c6da;
