--- a/sass/breakpoints/sm-tablet.scss
+++ b/sass/breakpoints/sm-tablet.scss
@@ -72,11 +72,23 @@
 .contact {
   padding: 40px 30px 40px;
   button {
-    width: 200px;
+    width: 220px;
     margin: 0 auto;
     display: block;
   }
   ul {
     margin: 30px auto 0;
+    width: 220px;
+    li {
+      i {
+        font-size: 2.4rem;
+      }
+    }
+
+    li:hover {
+      i {
+        font-size: 3.2rem;
+      }
+    }
   }
 }
