--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -104,16 +104,16 @@
     list-style: none;
     display: flex;
     margin-top: 40px;
-    width: 220px;
+    width: 280px;
     display: flex;
     justify-content: space-between;
   }
 
   li {
-    margin-right: 15px;
     width: 32px;
+    text-align: center;
     i {
-      font-size: 3.5rem;
+      font-size: 3rem;
       transition: 0.4s;
     }
 
