--- a/styles/breakpoints/sm-tablet.css
+++ b/styles/breakpoints/sm-tablet.css
@@ -57,12 +57,19 @@
   padding: 40px 30px 40px;
 }
 .contact button {
-  width: 200px;
+  width: 220px;
   margin: 0 auto;
   display: block;
 }
 .contact ul {
   margin: 30px auto 0;
+  width: 220px;
+}
+.contact ul li i {
+  font-size: 2.4rem;
+}
+.contact ul li:hover i {
+  font-size: 3.2rem;
 }
 
 /*# sourceMappingURL=sm-tablet.css.map */
