--- a/styles/breakpoints/tablet.css
+++ b/styles/breakpoints/tablet.css
@@ -33,13 +33,13 @@
   font-size: 2rem;
 }
 .header__activator {
-  background-color: #26c6daa6;
+  background-color: #1c1c1ceb;
   width: 70px;
   height: 70px;
   position: fixed;
   bottom: 20px;
   right: 20px;
-  color: white;
+  color: #26c6da;
   font-size: 3rem;
   display: flex;
   align-items: center;
@@ -222,7 +222,7 @@
 }
 
 .active__activator {
-  background-color: #ffaf52a6;
+  color: #ffaf52;
 }
 
 .sendedMessage.show {
