--- a/styles/breakpoints/mobile-l.css
+++ b/styles/breakpoints/mobile-l.css
@@ -12,5 +12,8 @@
 .contact label textarea {
   font-size: 1rem;
 }
+.contact p {
+  font-size: 1.1rem;
+}
 
 /*# sourceMappingURL=mobile-l.css.map */
